test/JDBC/expected/BABEL-3190.out
-- psql
show babelfishpg_tsql.dump_restore;
go
~~START~~
text
off
~~END~~

drop table if exists babel_3190_t1;
go
~~WARNING (Code: 0)~~

~~WARNING (Message: table "babel_3190_t1" does not exist, skipping  Server SQLState: 00000)~~

drop table if exists babel_3190_t2;
go
~~WARNING (Code: 0)~~

~~WARNING (Message: table "babel_3190_t2" does not exist, skipping  Server SQLState: 00000)~~

drop table if exists babel_3190_t3;
go
~~WARNING (Code: 0)~~

~~WARNING (Message: table "babel_3190_t3" does not exist, skipping  Server SQLState: 00000)~~

CREATE TABLE babel_3190_t1(
    a sys.datetime2(6) without time zone,
    b sys.datetime,
    c sys.smalldatetime(0) without time zone
);
go
~~ERROR (Code: 0)~~

~~ERROR (Message: ERROR: syntax error at or near "without"
  Position: 52
    Server SQLState: 42601)~~

set babelfishpg_tsql.dump_restore to on;
go
CREATE TABLE babel_3190_t2(
    a sys.datetime2(6) without time zone,
    b sys.datetime(3) without time zone,
    c sys.smalldatetime(0) without time zone
);
go
~~ERROR (Code: 0)~~

~~ERROR (Message: ERROR: syntax error at or near "without"
  Position: 93
    Server SQLState: 42601)~~

CREATE TABLE babel_3190_t3(
    a sys.datetime2(6) without time zone,
    b sys.datetime,
    c sys.smalldatetime(0) without time zone,
    d time(0) without time zone,
    e sys.datetimeoffset(7) with time zone
);
go
~~WARNING (Code: 0)~~

~~WARNING (Message: TIMESTAMP(7) WITH TIME ZONE precision reduced to maximum allowed, 6  Server SQLState: 22023)~~~~WARNING (Message: TIMESTAMP(7) WITH TIME ZONE precision reduced to maximum allowed, 6  Server SQLState: 22023)~~

select pg_catalog.format_type(oid, 3) from
    (select oid from pg_type where typname in ('datetime2', 'smalldatetime', 'time', 'datetimeoffset')) a order by 1;
go
~~START~~
text
sys.datetime2(3)
sys.datetimeoffset(3)
sys.smalldatetime(3)
time(3) without time zone
~~END~~

reset babelfishpg_tsql.dump_restore;
go
drop table if exists babel_3190_t1;
go
~~WARNING (Code: 0)~~

~~WARNING (Message: table "babel_3190_t1" does not exist, skipping  Server SQLState: 00000)~~

drop table if exists babel_3190_t2;
go
~~WARNING (Code: 0)~~

~~WARNING (Message: table "babel_3190_t2" does not exist, skipping  Server SQLState: 00000)~~

drop table if exists babel_3190_t3;
go
